fix dob overlapping

--- a/src/app/(auth)/auth.scss
+++ b/src/app/(auth)/auth.scss
@@ -11,7 +11,7 @@
         justify-content: space-between;
         align-items: center;
         width: 45%;
-        margin: 0 auto;
+        margin: 0 auto 3rem;
         position: relative;
 
         .progress-step {
